# Slack-open-data-science-search-system

./: .editorconfig  .flake8  .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  build_index.py  docker-compose.yml  flake8.tests.ini  index.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py
doc/: bool_search.rst  conf.py  index.rst  parser.rst  spellchecker.rst  web_app.rst
src/: __init__.py
src/app/: App.py  MainPage.py  __init__.py  main_page.py  run.py  templates.py  utils.py
src/app/elements/: __init__.py  common.py  main_page.py  result_page.py  utils.py
src/app/pages/: ResultPage.py  Search_Result.py
src/app/templates/: __init__.py  common.py  main_page.py  result_page.py
src/locales/en/LC_MESSAGES/: app.po
src/locales/ru/LC_MESSAGES/: app.po
src/parser/: __init__.py  clean.py  downloader.py  parser.py
src/search_index/: index.py  query_processing.py  varbyte_encoding.py
src/spellchecker/: build_models.py  error_model.py  language_models.py  prefix_tree.py  spellchecker.py  support_functions.py  utils.py
src/spellchecker/models/: error_model.pickle
tests/app/ui/: OFFtest_main_page.py  fixtures.py  test_main_page.py
tests/parser/: data.csv  test.csv  test_cleaner.py
tests/search_index/: test_search_index.py
tests/spellchecker/: test_spellchecker.py
wheels/: Faker-18.9.0-py3-none-any.whl  GitPython-3.1.31-py3-none-any.whl  MarkupSafe-2.1.2-cp310-cp310-macosx_10_9_x86_64.whl  altair-4.2.2-py3-none-any.whl  contourpy-1.0.7-cp310-cp310-macosx_10_9_x86_64.whl  favicon-0.7.0-py2.py3-none-any.whl  htbuilder-0.6.1-py3-none-any.whl  jsonschema-4.18.0a7-py3-none-any.whl  jsonschema_specifications-2023.5.1-py3-none-any.whl  kiwisolver-1.4.4-cp310-cp310-macosx_10_9_x86_64.whl  pydantic-1.10.6-cp310-cp310-macosx_10_9_x86_64.whl  pymdown_extensions-10.0.1-py3-none-any.whl  pymystem3-0.2.0-py3-none-any.whl  pyparsing-3.1.0b2-py3-none-any.whl  referencing-0.28.5-py3-none-any.whl  rpds_py-0.7.1-cp38-abi3-macosx_10_7_x86_64.whl  st_annotated_text-4.0.0-py3-none-any.whl  streamlit_camera_input_live-0.2.0-py3-none-any.whl  streamlit_card-0.0.4-py3-none-any.whl  streamlit_embedcode-0.1.2-py3-none-any.whl  streamlit_extras-0.2.7-py3-none-any.whl  streamlit_faker-0.0.2-py3-none-any.whl  streamlit_image_coordinates-0.1.3-py3-none-any.whl  streamlit_keyup-0.2.0-py3-none-any.whl  streamlit_toggle_switch-1.0.2-py3-none-any.whl  streamlit_vertical_slider-1.0.2-py3-none-any.whl  textdistance-4.5.0-py3-none-any.whl  tornado-6.3.2-cp38-abi3-macosx_10_9_x86_64.whl  validators-0.20.0-py3-none-any.whl
