[project]
name = "Slack-open-data-science-search-system"
version = "1.0.0"
description = "Search system using slack dataset"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["slack", "search", "data science", "MSU"]
authors = [
  {name = "Denis Rogozhin", email = "den1s.rogozhin@mail.ru"},
  {name = "Aleksej Zubaryov", email = "aleksej.zubaryov@gmail.com"},
  {name = "Dmitriy Motrichenko", email = "001122mj@gmail.com"},
  {name = "Alexander Vorontsov", email = "makler322@gmail.com"},
]
maintainers = [
  {name = "Denis Rogozhin", email = "den1s.rogozhin@mail.ru"}
]
classifiers = [
  "Development Status :: 1 - Beta",
  "Programming Language :: Python"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/DenisRogozhin/Slack-open-data-science-search-system"

[project.gui-scripts]
DateTime = "src.app.MainPage:main"

[build-system]
requires = ["sphinx", "build", "flake8", "pydocstyle", "pytest", "setuptools", "babel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
AppRu = "src/locales/ru"
AppEn = "src/locales/en"
Doc = "doc"

[tool.setuptools.package-data]
AppRu = ["LC_MESSAGES/*.mo"]
AppEn = ["LC_MESSAGES/*.mo"]
Doc = ["_build/html/*.html"]
